<resources>
    <string name="app_name">MySpa2Go</string>
    <string name="action_settings">Settings</string>
    <string name="err_msg_name">Enter your full name</string>
    <string name="err_msg_empty">Cant Left Blank!</string>
    <string name="err_msg_city">Enter city name</string>
    <string name="err_msg_email">Enter valid email address</string>
    <string name="err_msg_password">Enter the password</string>
    <string name="err_msg_number">Enter the valid Number</string>
    <string name="err_msg_address">ENter the Address!</string>
    <string name="err_wrong_pass">You have entered wrong old password!</string>
    <string name="title_activity_splash">SplashActivity</string>
    <string name="facebook_app_id">770270483104747</string>
    <string name="enter_email">Enter Email</string>
    <string name="enter_name">Enter Name</string>
    <string name="services">SERVICES</string>
    <string name="enter_number">Enter Number</string>
    <string name="enter_address">Enter Address</string>
    <string name="password">password</string>
    <string name="enter_subject">Enter Subject</string>
    <string name="enter_message">Enter Message</string>
    <string name="log_in">LOG IN</string>
    <string name="additional_notes_content">If you have flexibility with booking time,  or notes on your order , please input that here</string>
    <string name="confirm_password">confirm password</string>
    <string name="sign_up">CREATE ACCOUNT</string>

    <string name="mismatch_password">Passwords did not match</string>
    <string name="alert">ALERT</string>
    <string name="no_internet_connection">No Internet Connection!</string>
    <string name="unable_find_facebook">"Unable to get your mail id due to facebook policy! Kindly sign up manually!"</string>
    <string name="cancel">Cancel</string>
    <string name="ok">OK</string>
    <string name="skip_to_continue">Skip to continue</string>
    <string name="dummy_text">BRINGING THE ULTIMATE \n SPA EXPERIENCE TO YOU</string>
    <string name="how_it_works">How It Works</string>
    <string name="our_services">OUR SERVICES</string>
    <string name="openDrawer"></string>
    <string name="lets_get_pampered">LETS GET PAMPERED</string>
    <string name="confirm">CONFIRM BOOKING</string>
    <string name="service">SERVICE -</string>
    <string name="name">NAME -</string>
    <string name="email">EMAIL -</string>

    <string name="number">NUMBER -</string>
    <string name="address">ADDRESS -</string>
    <string name="additional_notes">ADDITIONAL NOTES -</string>
    <string name="select_your_availability">SELECT YOUR AVAILABILITY -</string>
    <string name="available_slots">PREFFERED TIME SLOT -</string>
    <string name="service_name">SERVICE NAME</string>
    <string name="dummy_amount">$ 20</string>
    <string name="dummy_duration">2 HOURS</string>
    <string name="duration">DURATION</string>
    <string name="cost">COST</string>
    <string name="dummy_date">31-may-2016</string>
    <string name="remove">REMOVE</string>
    <string name="request_now">request now</string>
    <string name="cancel_appointment">CANCEL</string>
    <string name="are_you_sure_cancel">Are you sure you want to cancel this appointment.</string>
    <string name="are_you_sure_remove">Do you really want to remove this appointment.</string>
    <string name="my_cart">MY CART</string>
    <string name="booking">BOOKING</string>
    <string name="checkout">CHECKOUT</string>
    <string name="no_item">NO ITEM AVAILABLE!</string>
    <string name="successfully_added">SUCCESSFULLY ADDED TO YOUR CART!</string>
    <string name="log_in_alert_msg">Kindly log in for make this booking.</string>
    <string name="success">SUCCESS</string>
    <string name="yes">YES</string>
    <string name="close">CLOSE</string>
    <string name="add_reminder">ADD REMINDER</string>
    <string name="no">NO</string>
    <string name="add_reminder_text">Do you want to add a reminder to your calendar?</string>
    <string name="set_reminder_alert_content_pre">Your appointment request for this checkout (</string>
    <string name="set_reminder_alert_content_post">) has been placed.</string>
    <string name="select_city_alert">Kindly Select City First!</string>
    <string name="invalid_date">Invalid Date</string>
    <string name="update">UPDATE</string>
    <string name="enter_password">NEW PASSWORD</string>
    <string name="reenter_pass">REENTER PASSWORD</string>
    <string name="pass_caps">PASSWORD -</string>
    <string name="old_name">OLD NAME -</string>
    <string name="old_email">OLD EMAIL -</string>
    <string name="old_number">OLD NUMBER - </string>
    <string name="old_password">OLD PASSWORD -</string>
    <string name="new_name">NEW NAME -</string>
    <string name="new_email">NEW EMAIL -</string>
    <string name="new_number">NEW NUMBER - </string>
    <string name="new_password">NEW PASSWORD -</string>
    <string name="confirm_pass">CONFIRM PASSWORD -</string>
    <string name="old_pass_et">OLD PASSWORD</string>
    <string name="old_pass_mismatch">Old password mismatch!</string>
    <string name="new_pass_mismatch">New password mismatch!</string>

    <!--enquiry for strings-->
    <!-- company detail-->
    <string name="company_details">Company Details</string>
    <string name="company_name">Company Name</string>
    <string name="location_of_services">Location of services</string>
    <string name="contact_person">Contact person</string>
    <string name="contact_email">Contact email</string>
    <string name="contact_phone">Contact phone</string>

    <!--When would you like to book the services for?-->
    <string name="book_service_for">When would you like to book the services for?</string>
    <string name="prefered_date">Preferred Date</string>
    <string name="hours_of_services">Hours of Service</string>
    <string name="approximate_guests">Approximate number of guests to service:</string>
    <string name="from">From</string>
    <string name="to">To</string>

    <!--Please choose a list of services you are interested:-->
    <string name="list_of_services_text">Please choose a list of services you are interested:</string>
    <string name="nail_services">Nail Services:</string>
    <string name="express_manicure">Express manicure</string>
    <string name="express_pedicure">Express pedicures</string>
    <string name="express_gel_manicure">Express Gel manicure</string>
    <string name="nail_design">Nail design/art</string>
    <string name="custom_nail_decals">Custom nail decals</string>

    <!--Massage Services:-->
    <string name="massage_service">Massage Services:</string>
    <string name="chair_massage">Chair Massage</string>
    <string name="Reflexology">Reflexology</string>
    <string name="Shiatsu_Streching">Shiatsu/Streching</string>
    <string name="Aromatherapy">Aromatherapy</string>
    <string name="Reiki">Reiki</string>
    <string name="Hand_foot_massage">Hand/foot massage (with hot stones)</string>

    <!--    Services for Male:-->
    <string name="Services_for_Male">Services for Male:</string>
    <string name="Express_manicure_with_buff">Express manicure with buff</string>
    <string name="Shoe_Shine">Shoe Shine</string>
    <string name="Razor_Shave">Razor Shave</string>

    <!--Hair & Face:-->
    <string name="Hair_Face">Hair amp Face</string>
    <string name="brow_bar">Brow Bar (Eyebrow shaping)</string>
    <string name="braid_bar">Braid Bar (Hair Braiding or up-do\'s)</string>
    <string name="lash_bar">Lash Bar (eyelash extensions)</string>
    <string name="mini_facials">Mini Facials</string>
    <string name="makeup_touch_ups"> Makeup touch-ups</string>
    <string name="brow_threading">Brow threading</string>

    <!--Well being:-->
    <string name="well_being">Well being:</string>
    <string name="nutriotion_consultation">Nutrition consultation</string>
    <string name="yoga_classes">Yoga/pilates classes</string>
    <string name="fitness_inst">Fitness instruction (with fun twists)</string>
    <string name="number_of_technician">Number of technicians: </string>

    <string name="request_a_quote">Request a Quote</string>
    <string name="question">Que-</string>
    <string name="answer">Ans-</string>

    <string name="corporate_inquiry_first_par">For private and corporate event bookings please visit our website or call us and we’d be happy to help plan your event. </string>
    <string name="website">http://www.myspa2go.com/private-events/</string>
    <string name="spa_number">tel\: 646.241.4477</string>
    <string name="spa_mail">info@myspa2go.com</string>

    <string name="submit">SUBMIT</string>
    <string name="confirm_city">Confirm City</string>
    <string name="login_alert">LOGIN ALERT</string>


    <string name="facebook">https://www.facebook.com/MYSPA2GO-114998045182831/</string>
    <string name="instagram">https://www.instagram.com/myspa2go/</string>
    <string name="twitter">https://twitter.com/myspa2go_nyc</string>
    <string name="step_5">5. Then sit back , relax and let us bring the ultimate spa experience to you by one of our highly rated professionals.</string>
    <string name="step_4">4. Once confirmed, credit card payment will be processed.</string>
    <string name="step_3">3. An email confirming or denying request will be sent to you.</string>
    <string name="step_2">2. Request a date, time and location to receive services.</string>
    <string name="step_1">1. Choose a service.</string>
    <string name="select_duration">Select Duration</string>
    <string name="select_quantity">Select Quantity</string>
    <string name="order_place_success_message">we are working on your request. Please stand by for email confirmation.</string>
    <string name="therapist_gender">Therapist Gender</string>
    <string name="massage_table">Massage Table</string>
    <string name="flexible_with_time">flexible with time</string>
    <string name="imageview_transition_name">imageview transition name</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="price">price</string>
    <string name="doller_symbol">$ </string>
    <string name="select_your_preferred_data">Select your preferred Data</string>
    <string name="please_note_we_kindly_request_a_minimum_booking_order_of_85">Please note, we kindly request a minimum booking order of $85</string>
    <string name="send_enquiry">Send Request</string>
    <string name="enter_zipcode_here">Enter Zipcode Here</string>
    <string name="zip_validation_error">Zip code can not left blank</string>
    <string name="enter_floor_apartment_here">Enter Floor/Apartment Here</string>
    <string-array name="timing_array">
        <item>8:00 AM</item>
        <item>8:30 AM</item>
        <item>9:00 AM</item>
        <item>9:30 AM</item>
        <item>10:00 AM</item>
        <item>10:30 AM</item>
        <item>11:00 AM</item>
        <item>11:30 AM</item>
        <item>12:00 PM</item>
        <item>12:30 PM</item>
        <item>1:00 PM</item>
        <item>1:30 PM</item>
        <item>2:00 PM</item>
        <item>2:30 PM</item>
        <item>3:00 PM</item>
        <item>3:30 PM</item>
        <item>4:00 PM</item>
        <item>4:30 PM</item>
        <item>5:00 PM</item>
        <item>5:30 PM</item>
        <item>6:00 PM</item>
        <item>6:30 PM</item>
        <item>7:00 PM</item>
        <item>7:30 PM</item>
        <item>8:00 PM</item>
        <item>8:30 PM</item>
    </string-array>
</resources>
