<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:pixlui="http://schemas.android.com/apk/com.neopixl.pixlui"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:layout_marginLeft="@dimen/twenty_dp"
        android:layout_marginRight="@dimen/twenty_dp"
        android:background="@drawable/top_corner_rounded_black"
        android:gravity="center"
        android:orientation="vertical"
        android:padding="@dimen/ten_dp">

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="@dimen/one_hundred_dp"
            android:layout_height="@dimen/one_hundred_dp"
            android:src="@drawable/logo_white"
            android:visibility="visible" />


        <com.neopixl.pixlui.components.edittext.EditText
            android:id="@+id/edtEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/ten_dp"
            android:background="@drawable/rounded_corner_white_bg"
            android:hint="@string/enter_email"
            android:inputType="textEmailAddress"
            android:nextFocusLeft="@+id/edtpassword"
            android:nextFocusUp="@+id/edtpassword"
            android:padding="@dimen/fifteen_dp"
            android:textSize="@dimen/sixteen_sp"
            pixlui:typeface="Titillium-Regular.otf" />


        <com.neopixl.pixlui.components.edittext.EditText
            android:id="@+id/edtpassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:layout_marginTop="@dimen/ten_dp"
            android:background="@drawable/rounded_corner_white_bg"
            android:padding="@dimen/fifteen_dp"
            android:textSize="@dimen/sixteen_sp"
            pixlui:typeface="Titillium-Regular.otf" />


        <com.neopixl.pixlui.components.button.Button
            android:id="@+id/signin_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/thirty_dp"
            android:background="@color/background_bottom_color"
            android:gravity="center"
            android:text="@string/log_in"
            android:textColor="@android:color/white"
            android:textSize="@dimen/twenty_sp"
            pixlui:typeface="Titillium-Bold.otf" />

        <com.neopixl.pixlui.components.textview.TextView
            android:id="@+id/forgotPassTV"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/twenty_dp"
            android:padding="@dimen/five_dp"
            android:text="@string/forgot_password"
            android:textColor="@color/background_bottom_color"
            android:textSize="@dimen/eighteen_sp"
            pixlui:typeface="Titillium-Bold.otf" />
    </LinearLayout>


</RelativeLayout>