<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    xmlns:pixlui="http://schemas.android.com/apk/com.neopixl.pixlui"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="@dimen/five_dp">

        <com.neopixl.pixlui.components.textview.TextView
            android:id="@+id/oldKeyTV"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:padding="10dp"
            android:text="@string/old_name"
            android:textColor="#fff"
            android:textSize="@dimen/eighteen_sp"
            pixlui:typeface="Titillium-Bold.otf" />

        <com.neopixl.pixlui.components.textview.TextView
            android:id="@+id/oldValueTV"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@android:color/transparent"
            android:gravity="center_vertical"
            android:hint="@string/old_name"
            android:padding="10dp"
            android:textColor="#fff"
            android:textColorHint="@android:color/darker_gray"
            android:textSize="@dimen/eighteen_sp"
            pixlui:typeface="Titillium-Regular.otf" />
    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/button_color" />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="@dimen/five_dp">

        <com.neopixl.pixlui.components.textview.TextView
            android:id="@+id/newKeyTV"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:padding="10dp"
            android:text="@string/new_name"
            android:textColor="#fff"
            android:textSize="@dimen/eighteen_sp"
            pixlui:typeface="Titillium-Bold.otf" />

        <com.neopixl.pixlui.components.edittext.EditText
            android:id="@+id/newValueET"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@android:color/transparent"
            android:gravity="center_vertical"
            android:hint="@string/enter_name"
            android:padding="10dp"
            android:textColor="#fff"
            android:textColorHint="@android:color/darker_gray"
            android:textSize="@dimen/eighteen_sp"
            pixlui:typeface="Titillium-Regular.otf" />
    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/button_color" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="@dimen/thirty_dp">

        <com.neopixl.pixlui.components.textview.TextView
            android:id="@+id/yesTV"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginRight="@dimen/five_dp"
            android:layout_weight="5"
            android:background="@drawable/alert_yes_button_background"
            android:gravity="center"
            android:padding="@dimen/twelve_dp"
            android:text="@string/ok"
            android:textColor="#fff"
            android:textSize="@dimen/eighteen_sp"
            pixlui:typeface="Titillium-Bold.otf" />


        <com.neopixl.pixlui.components.textview.TextView
            android:id="@+id/noTV"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/five_dp"
            android:layout_weight="5"
            android:gravity="center"
            android:padding="@dimen/twelve_dp"
            android:text="@string/cancel"
            android:textColor="#fff"
            android:textSize="@dimen/eighteen_sp"
            pixlui:typeface="Titillium-Bold.otf" />

    </LinearLayout>
</LinearLayout>